# Cyberpunk-Blender-add-on

i_scene_cp77_gltf/: __init__.py
i_scene_cp77_gltf/animtools/: animtools.py
i_scene_cp77_gltf/exporters/: mlsetup_export.py  sector_export.py  sectors_export.py
i_scene_cp77_gltf/importers/: entity_import.py  import_with_materials.py  sector_import.py
i_scene_cp77_gltf/main/: bartmoss_functions.py  common.py  material_registry.py  setup.py
i_scene_cp77_gltf/material_types/: decal.py  decal_gradientmap_recolor.py  decal_gradientmap_recolor_emissive.py  meshdecalemissive.py  multilayered.py  signages.py  skin.py
i_scene_cp77_gltf/materialtools/: __init__.py
i_scene_cp77_gltf/resources/: Template.Material.json  empty.streamingsector.json
i_scene_cp77_gltf/resources/scripts/: redkit_fbx_import.py
pxbridge/: CMakeLists.txt  README.md  pxbridge.cpp  pxbridge.h
